# crafting_interpreters

./: .gitignore  CMakeLists.txt  Makefile  README.md
eg/: class_1.lox  class_2.lox  class_5.lox  comments.lox  for_loop_statement_1.lox  for_loop_statement_2.lox  functions_1.lox  identifiers.lox  if_statement_1.lox  logical_and_1.lox  logical_or_1.lox  multiline_comment.lox  numbers.lox  precedence.lox  print.lox  resolver_1.lox  resolver_2.lox  resolver_3.lox  resolver_4.lox  string.lox  variables.lox  variables_1.lox  variables_2.lox  variables_3.lox  while_statement_1.lox  while_statement_2.lox
include/: AstPrinter.h  Callable.h  Environment.h  Errors.h  Expression.h  Interpreter.h  Lexer.h  Lox.h  LoxClass.h  Parser.h  Resolver.h  Statement.h
src/: Callable.cpp  Environment.cpp  Errors.cpp  Interpreter.cpp  Lexer.cpp  Lox.cpp  LoxClass.cpp  Parser.cpp  Resolver.cpp  main.cpp
